# queueManagement-display

./: .env.development  .env.production  .env.test  .gitignore  README.md  config.example.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: build-kylin-arm64-deb.yml
docker/: Dockerfile.kylin
public/: config.example.json
scripts/: build-kylin-docker.sh  build-kylin.sh  build-win.sh  install-llvm-rc.sh  kylin-launcher.sh  repack-appimage-glibc-compat.sh  repack-deb-from-appimage.sh  verify-appimage-glibc.sh  verify-deb-kylin-compat.sh
src/: App.vue  env.d.ts  main.js  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-native-http-fetch.toml  allow-native-tts.toml  allow-runtime-config.toml  allow-touch-keyboard.toml
src-tauri/src/: http.rs  lib.rs  main.rs  runtime_config.rs  touch_keyboard.rs  tts.rs
src-tauri/windows/: installer-hooks.nsh
src/api/: queue.ts  queue.types.ts
src/components/: OnScreenKeyboard.vue  SimpleKeyboard.vue
src/utils/: debugDevtools.ts  deviceInfo.ts  httpFetch.ts  httpLogger.ts  idCardReader.ts  idCardReader.types.ts  keyboardInvoke.ts  onScreenKeyboard.ts  request.ts  request.types.ts  runtimeConfig.ts  terminalContext.ts  ticketPrinter.ts  ticketPrinter.types.ts  touchKeyboard.ts  tts.ts
src/views/: QueueTicket.vue  queueTicket.types.ts  查询可取号预约_OpenAPI.json  现场终端统一取号_OpenAPI.json  终端设备-初始化_OpenAPI.json  终端设备-查询可取号预约_OpenAPI.json
