[package]
name = "qms"
version = "0.1.0"
description = "报到取号"
authors = ["QMS"]
edition = "2021"

[lib]
name = "qms_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-device-info = "1"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Foundation",
  "Foundation_Collections",
  "Media_SpeechSynthesis",
  "Media_Playback",
  "Media_Core",
  "Storage_Streams",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
